<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UlsanBus</string>

    <string name="favorite">즐겨찾기</string>
    <string name="find_bus">버스찾기</string>
    <string name="find_station">정류소찾기</string>
    <string name="more">더보기</string>

    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="recent_search_history">최근 검색 기록</string>

    <string name="search_bus_number">버스번호 검색</string>
    <string name="search_station">정류소 검색</string>

    <string name="current_db_info">DB 버전 정보</string>

    <!-- more fragment -->
    <string name="current_version">현재 정보</string>
    <string name="latest_version">최신 정보</string>
    <string name="help">문의사항</string>
    <string name="parkjuram_mail_address">parkjuram@naver.com</string>
    <string name="info">정보</string>
    <string name="warning">주의사항</string>
    <string name="warning_content">정보 제공처의 상황에 따라 오차가 생길 수 있습니다. 실시간 정보 제공처는 아래와 같습니다.</string>
    <string name="ulsan_its_center">울산 교통 관리 센터</string>
    <string name="ulsan_its_center_url">http://www.its.ulsan.kr/</string>
    <string name="sample">sample string</string>
    <string name="arrival_info">도착 정보</string>
    <string name="show_bus_route_info">버스 경로 보기</string>
    <string name="ulsan_bus">울산버스</string>
    <string name="menuitem_refresh">menu_refresh</string>
    <string name="menuitem_favorite">menu_favorite</string>


</resources>
